Fix alignment for the coupon code link on order summary.

--- a/css/checkout-steps-305-beta-2.css
+++ b/css/checkout-steps-305-beta-2.css
@@ -1984,8 +1984,8 @@ div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-orde
   outline-offset: 1px !important;
 }
 
-div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-order-table .coupon-code-form td {
-  text-align: left;
+div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-order-table > tfoot > tr.coupon-code-form > td {
+  text-align: left !important;
 }
 
 @media (min-width: 1000px) {
