--- a/sass/partials/_order-summary.scss
+++ b/sass/partials/_order-summary.scss
@@ -309,8 +309,8 @@ div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-orde
 	}
 }
 
-div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-order-table .coupon-code-form td {
-	text-align: $alignment-left;
+div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-order-table > tfoot > tr.coupon-code-form > td {
+	text-align: $alignment-left !important; // Needed to override theme styles
 }
 
 
